[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://TestEnv/TestBossGummyBear.gd" type="Script" id=2]
[ext_resource path="res://TestEnv/PlayerDetector.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[node name="GummyBear" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="icon" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerDetector" parent="." instance=ExtResource( 3 )]

[node name="DashTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
